--- a/src/main/resources/public/scss/formDesigner/_buttons.scss
+++ b/src/main/resources/public/scss/formDesigner/_buttons.scss
@@ -189,3 +189,10 @@
   }
 }
 
+.z-button-icon {
+  &.z-button-attach-file {
+    .z-icon {
+      &.i-folder { background: $element-icon-color; }
+    }
+  }
+}
