--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -141,7 +141,7 @@
             .z-document-numbering {
               font-size: 1rem; // 16px
               font-weight: $font-weight-regular;
-              color: $gray;
+              color: $gray400;
             }
           }
           &-topic {
