--- a/src/main/resources/public/scss/theme/default/_reply.scss
+++ b/src/main/resources/public/scss/theme/default/_reply.scss
@@ -30,7 +30,7 @@
         align-items: center;
       }
       &-create-date {
-        color: $gray;
+        color: $gray400;
       }
       &-row {
         margin-top : 1.875rem; // 30px
