--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -262,7 +262,7 @@
             <!-- 폼 -->
             <div class="z-form-main" id="formMain">
                 <div id="saveInfo" class="z-save-info align-center"></div>
-                <div class="z-drawing-board align-center" id="formDrawingBoard"></div>
+                <div class="z-drawing-board align-center" id="formDrawingBoard" data-display="ready"></div>
             </div>
             <!-- 속성 패널 -->
             <div class="z-form-properties-panel-header breadcrumb">
