--- a/src/main/resources/public/scss/document/_form.scss
+++ b/src/main/resources/public/scss/document/_form.scss
@@ -10,7 +10,7 @@ $tooltip-type: (group, row, component);
 .z-group {
   &.accordion {
     .z-group-accordion-checkBox:checked {
-      ~ .wrow-tooltip:not(.off):last-child {
+      ~ .row-tooltip:not(.off):last-child {
         @include border(0.0625rem, solid, $group-accordion-border-color, bottom); // 1px
       }
     }
