--- a/src/main/resources/public/scss/formDesigner/_icons.scss
+++ b/src/main/resources/public/scss/formDesigner/_icons.scss
@@ -38,7 +38,7 @@
 
   // 컴포넌트
   &.i-no-image {
-    @include maskImage('#{$icon-folder-path}icon_image.svg', 100%, 2.813rem, no-repeat, center, 2.813rem, $component-imagebox-font-color); // 45px
+    @include maskImage('#{$icon-folder-path}formDesigner/form/icon_image_component.svg', 100%, 2.813rem, no-repeat, center, 2.813rem, $component-imagebox-font-color);
   }
 
   // 세부 속성
