--- a/src/main/resources/public/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/scss/template/_file-uploader.scss
@@ -207,7 +207,7 @@
         }
 
         &.dz-error {
-          border-color: $red;
+          border-color: $validation-error-font-color;
           // 툴팁
           .dz-error-message {
             display: block;
@@ -239,7 +239,7 @@
           .dz-remove {
             .z-icon {
               &.i-delete {
-                @include maskImage('#{$icon-folder-path}icon_clear.svg', 1.5rem, 1.5rem, no-repeat, center, null, $red); // 24px 24px
+                @include maskImage('#{$icon-folder-path}icon_clear.svg', 1.5rem, 1.5rem, no-repeat, center, null, $validation-error-font-color); // 24px 24px
               }
             }
           }
