--- a/src/main/resources/public/scss/theme/default/_avatar.scss
+++ b/src/main/resources/public/scss/theme/default/_avatar.scss
@@ -3,7 +3,7 @@
 .avatar {
     font-size: 1rem; // 16px
     font-weight: $font-weight-regular;
-    color: $gray;
+    color: $gray400;
     &-text {
       text-align: center;
     }
