--- a/src/main/resources/public/scss/template/_avatar.scss
+++ b/src/main/resources/public/scss/template/_avatar.scss
@@ -35,7 +35,7 @@
           // 아이콘
           .z-icon {
             &.i-avatar {
-              @include maskImage('#{$icon-folder-path}fileUploader/icon_avatar.svg', 100%, 3.75rem, no-repeat, center, 5rem, map-get($grays, 'pressed')); // 60px
+              @include maskImage('#{$icon-folder-path}fileUploader/icon_avatar.svg', 100%, 3.75rem, no-repeat, center, 5rem, $gray300); // 60px
               margin-bottom: 1.25rem; // 20px
             }
           }
